# japanese_tokenize_eval_weaviate

./: README.md  docker-compose.yml  evaluate_japanese.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
