[tool.poetry]
name = "evaluate japanese tokenizer"
version = "0.1.0"
description = "Evaluate japanese tokenizer using Weaviate"
authors = ["Jun Ohtani <johtani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
weaviate-client = "^4.7.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
